# tinyhttpd

./: CMakeLists.txt  README.md  tinyhttpd.cpp  tinyhttpd.h
.github/workflows/: cmake-multi-platform.yml
Windows/lib/: hv.lib  hv_static.lib
Windows/libx64/: hv.lib
